fixed spacing issues on imagery and projects

--- a/styles/sass/_cards.scss
+++ b/styles/sass/_cards.scss
@@ -4,8 +4,10 @@
     align-items: center;
     width: 100%;
     margin-top: 15vw;
-    margin-bottom: 20vw;
     padding: 7vw 7vw;
+    margin-bottom: 2vw;
+    position: relative;
+    z-index: 3;
 
     .img-left {
         width: 30%;
