--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -24,7 +24,7 @@ html {
 #home {
     width: 100%;
     height: 250vh;
-    background-color: #f0f0f0;
+    background-color: #fcfaf8;
 
     #nav {
         position: sticky;
