--- a/styles/style.css
+++ b/styles/style.css
@@ -686,7 +686,7 @@ html {
 #home {
   width: 100%;
   height: 250vh;
-  background-color: #f0f0f0;
+  background-color: #fcfaf8;
 }
 #home #nav {
   position: sticky;
@@ -876,8 +876,10 @@ html {
           align-items: center;
   width: 100%;
   margin-top: 15vw;
-  margin-bottom: 20vw;
   padding: 7vw 7vw;
+  margin-bottom: 2vw;
+  position: relative;
+  z-index: 3;
 }
 #imagery .img-left {
   width: 30%;
@@ -1007,6 +1009,7 @@ html {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+  margin-top: 10vw;
 }
 .services .o-ui-arrow {
   width: auto;
@@ -1246,6 +1249,7 @@ hr {
 }
 .project-row .u-width-4 {
   width: 26%;
+  z-index: 2;
   -webkit-transform: translate(0, 42%);
           transform: translate(0, 42%);
 }
@@ -1263,7 +1267,7 @@ hr {
   position: relative;
   overflow: hidden;
   border-radius: 40px;
-  margin: 1vh 6vw;
+  margin: 0vw 6vw;
 }
 .project-items:hover .project-info > p {
   opacity: 1;
@@ -1371,7 +1375,19 @@ hr {
           justify-content: space-between;
   width: 100%;
   min-height: 100vh;
-  background-color: #f2f2f2;
+  background-color: #fcfaf8;
+}
+#about::before {
+  content: " ";
+  display: block;
+  top: 15px;
+  position: absolute;
+  width: 100%;
+  height: 160px;
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+  background-image: url("../../assets/rip.f6d7c4dd.svg");
+  background-size: cover;
 }
 #about .about-title {
   display: -webkit-box;
